--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.6.1",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
+    "expo-barcode-scanner": "~11.2.0",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
