--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "negotiationcards",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -18,8 +17,10 @@
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-barcode-scanner": "~11.2.0",
+    "expo-camera": "^12.1.2",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
